refactor: Frame 계산 방법 수정